# Bezier_GPU

./: Bezier.cpp  Bezier.h  CMakeLists.txt
Shaders/: bezier2d.ps.slang  bezier2d.vs.slang  bezier_eval.slang  raymarch.slang
